[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["BLACKBOXAI"]
description = "A Solana arbitrage bot with JIT liquidity, MEV protection, and flash loan capabilities"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
anchor-lang = "0.28"
serum_dex = "0.5"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
dotenv = "0.15"
base64 = "0.21"
bincode = "1.3"
bs58 = "0.5"
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
